--- a/css/appp-admin-styles.css
+++ b/css/appp-admin-styles.css
@@ -14,20 +14,35 @@
 .license_key.description span.inactive {nbackground: #F14949; } 
 .license_key.description span.inactive a { color: #fff; }
 
-.addon {
+.appp-addon {
+	background: #fafafa;
+	border: 1px solid #eee;
+	padding: 1em;
+	margin: 0 1% 1em 0;
+	min-width: 200px;
+	max-width: 300px;
 	width: 30%;
+	position: relative;
 	float: left;
-	margin-right: 1%;
-	margin-bottom: 15px;
+	height: 475px;
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
+	box-sizing: border-box;
 }
 
-.addon .button-secondary {
-	margin-top: 15px;
+.appp-addon img {
+	max-width: 100%;
+	height: auto;
+}
+
+.appp-addon h2 {
+	margin-bottom: 10px;
 }
 
 @media screen and (max-width:600px) {
-	.addon {
+	.appp-addon {
 		width: 100%;
+		max-width: 100%;
 		float: none;
 		margin-right: 0;
 	}
