--- a/css/appp-admin-styles.css
+++ b/css/appp-admin-styles.css
@@ -1,18 +1,65 @@
 /** Tooltip hover styles **/
 
-.apppresser_settings .help { background: rgb(220,220,220); border-radius: 50%; color: rgb(0, 0, 0); display: inline-block; height: 15px; margin-left: 5px; text-align: center; text-decoration: none; text-shadow: none; width: 15px; font-weight: normal; } 
-.apppresser_settings.mp6 .help { line-height: 15px; } 
-.form-table .appp-section-title { padding-bottom: 0; } 
-.appp-section-title h3 { margin: 0; } 
-.apppresser_settings .form-table { display: none; padding-top: .6em; } 
-.apppresser_settings .form-table.nav-tab-active { display: block; } 
-.appp-ajax-results-help { display:none; margin: 10px 0 -8px 7px !important; } 
-.submit .appp-tabs { margin: 0 10px; display: none; } 
-.appp-tabs.nav-tab-active { display: inline; } 
-.license_key.description span { color: white; display: block; background: #49C749; text-align: center; font-weight: bold; font-style: normal; text-transform: uppercase; margin: -5px 1px; width: 25em; } 
-.mp6 .license_key.description span { font-size: 14px; } 
-.license_key.description span.inactive {nbackground: #F14949; } 
-.license_key.description span.inactive a { color: #fff; }
+.apppresser_settings .help {
+	background: rgb(220,220,220);
+	border-radius: 50%;
+	color: rgb(0, 0, 0);
+	display: inline-block;
+	height: 15px;
+	margin-left: 5px;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: none;
+	width: 15px;
+	font-weight: normal;
+}
+.apppresser_settings.mp6 .help {
+	line-height: 15px;
+}
+.form-table .appp-section-title {
+	padding-bottom: 0;
+}
+.appp-section-title h3 {
+	margin: 0;
+}
+.apppresser_settings .form-table {
+	display: none;
+	padding-top: .6em;
+}
+.apppresser_settings .form-table.nav-tab-active {
+	display: block;
+}
+.appp-ajax-results-help {
+	display:none;
+	margin: 10px 0 -8px 7px !important;
+}
+.submit .appp-tabs {
+	margin: 0 10px;
+	display: none;
+}
+.appp-tabs.nav-tab-active {
+	display: inline;
+}
+.license_key.description span {
+	color: white;
+	display: block;
+	background: #49C749;
+	text-align: center;
+	font-weight: bold;
+	font-style: normal;
+	text-transform: uppercase;
+	margin: -5px 1px;
+	width: 25em;
+}
+.mp6 .license_key.description span {
+	font-size: 14px;
+}
+.license_key.description span.inactive {
+	background: #F14949;
+}
+.license_key.description span.inactive a {
+	color: #fff;
+}
 
 .appp-addon {
 	background: #fafafa;
@@ -24,9 +71,9 @@
 	width: 30%;
 	position: relative;
 	float: left;
-	height: 475px;
-	-moz-box-sizing: border-box; 
-	-webkit-box-sizing: border-box; 
+	height: 515px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
